<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_reserve"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_xuhao"
            android:text="@string/serial_number"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_timestart"
            android:text="@string/start_time"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_timeend"
            android:text="@string/End_time"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_cashier"
            android:text="@string/Cashiers"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_Total"
            android:text="@string/Total_cash_collection"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_cash"
            android:text="@string/Cash_payment"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_micro"
            android:text="@string/mobile_type"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_standby"
            android:text="@string/reserve_fund"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_money"
            android:text="@string/turn_over_money"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_other"
            android:text="@string/Other_amount"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_cash_hand"
            android:text="@string/stock_cash"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>