<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:background="@drawable/gray1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_xuhao"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/serial_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_time"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="2"
            android:text="@string/Reporting_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_bncode"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="2"
            android:text="@string/Commodity_bar_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_name"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="2"
            android:text="@string/Trade_name"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_cost"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/buying_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_nums"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/number"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_money"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/Amount_of_loss_reported"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_man"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/Report_person"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_particulars"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/details"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>