<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_xunhao"
        android:textSize="18dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/serial_number"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_danhao"
        android:text="@string/Order_number"
        android:textSize="18dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_time"
        android:text="@string/Order_time"
        android:textSize="18dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_ures_name"
        android:text="@string/Cashiers"
        android:textSize="18dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_payment"
        android:text="@string/type"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:textSize="18dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_money"
        android:text="@string/Amount_money"
        android:textSize="18dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/but_details"
        android:text="@string/details"
        android:background="@drawable/but_main"
        android:textColor="@color/colormain"
        android:textSize="18dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:layout_weight="1.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />



</LinearLayout>