<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/but_ItemAdd"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/but_comm"
        android:text="@string/newly_increased_goods" />

    <Button
        android:id="@+id/but_note"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/but_ItemAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/but_comm"
        android:text="@string/common_remarks" />



    <EditText
        android:id="@+id/ed_seek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/ed_beijin"
        android:drawableRight="@drawable/shousuo"
        android:hint="@string/Please_enter_barcode_search"
        android:imeOptions="actionSearch"
        android:padding="5dp"
        android:singleLine="true" />


    <LinearLayout
        android:layout_below="@+id/ed_seek"
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:id="@+id/tv_xuhao"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/serial_number"
            android:textSize="20dp"
            android:padding="5dp"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/goods_name"
            android:textSize="20dp"
            android:padding="5dp"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stock"
            android:textSize="20dp"
            android:padding="5dp"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_weight="1.5"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Supplier"
            android:textSize="20dp"
            android:padding="5dp"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textSize="20dp"
            android:padding="5dp"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/purchase_price"
            android:textSize="20dp"
            android:padding="5dp"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operation"
            android:textSize="20dp"
            android:padding="5dp"
            android:layout_margin="5dp"/>


    </LinearLayout>
    <View
        android:layout_below="@+id/ll_title"
        android:background="@color/color_fefefe"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>


    <ListView
        android:layout_below="@+id/ll_title"
        android:id="@+id/list_outbound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>





    <Button
        android:id="@+id/but_outbound"
        android:text="@string/Out_of_stock"
        android:background="@drawable/cc_button"
        android:textSize="18dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:textColor="#ffffff"
        android:layout_width="60dp"
        android:layout_height="60dp" />
</RelativeLayout>