<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_serial"
            android:layout_weight="1"
            android:text="@string/serial_number"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_name"
            android:layout_weight="2"
            android:text="@string/Trade_name"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_bncode"
            android:layout_weight="2"
            android:text="@string/Commodity_bar_code"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_classify"
            android:layout_weight="1"
            android:text="@string/Commodity_classification"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_repertory"
            android:layout_weight="1"
            android:text="@string/Existing_inventory"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_number"
            android:layout_weight="1"
            android:text="@string/Sales_volumes"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_total"
            android:layout_weight="1"
            android:text="@string/Total_commodity_price"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_received"
            android:layout_weight="1"
            android:text="@string/Amount_received"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <!--<TextView-->
            <!--android:layout_weight="1"-->
            <!--android:text="实收占比"-->
            <!--android:padding="5dp"-->
            <!--android:gravity="center"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content" />-->
        <TextView
            android:id="@+id/tv_lirun"
            android:layout_weight="1"
            android:text="@string/interest_rate"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:visibility="gone"
            android:id="@+id/tv_lirunli"
            android:layout_weight="1"
            android:text="@string/Interest_rate_interest"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
        <!--<Button-->
            <!--android:background="@drawable/but_main"-->
            <!--android:text="趋势分析"-->
            <!--android:textSize="14dp"-->
            <!--android:textColor="@color/colormain"-->
            <!--android:layout_margin="5dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="30dp" />-->
    </LinearLayout>

</LinearLayout>