<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_xuhao"
            android:text="@string/number"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_name"
            android:text="@string/name"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_phone"
            android:text="@string/phone_number"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_balance_changes"
            android:text="@string/Balance_change"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/but_Integral_change"
            android:text="@string/Integral_change"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_operator"
            android:text="@string/Operator"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_time"
            android:text="@string/time"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>